# gamenastix-preview

./: .gitmodules  CMakeLists.txt  README.md
source/bio/: Bio4.h  Bio8.h  Medium.h  Model.h  RigidHuman.h  Segment.h  Sequence.h
source/component/: Axis.h  Bone.h  BoneSequence.h  Floor.h  Scene.h  Skeleton.h
source/math/: LinearAlgebra.cpp  LinearAlgebra.h  MathTypes.cpp  MathTypes.h
source/model/: Layout.h  Model.h
source/network/: Dispatcher.h  Matcher.h
source/opengl/: ContextMenu.h  ContextPreserver.h  Display.h  KeyboardController.h  MouseController.h  OpenGLContext.cpp  OpenGLContext.h  OrbitCamera.h  Quad.h  glout.h
source/sensor/: Calibrator.h  Sensor.h
start/: main.cpp
